@@ -2,9 +2,10 @@
 #define RIVET_RIVETBOOST_HH
 
 #include "boost/smart_ptr.hpp"
+#include "boost/pointer_cast.hpp"
 #include "boost/lexical_cast.hpp"
 #include "boost/assign.hpp"
-#include <boost/algorithm/string.hpp>
+#include "boost/algorithm/string.hpp"
 
 #include "boost/foreach.hpp"
 #ifndef foreach
