@@ -1,10 +1,19 @@
 2013-06-05  Andy Buckley  <andy.buckley@cern.ch>
 
-	* Adding histo booking from an explicit reference Scatter2D (and more placeholders for 2D histos / 3D scatters) and rewriting existing autobooking to use this.
+	* Renaming Analysis::add() etc. to very explicit
+	addAnalysisObject(), sorting out shared_pointer polymorphism
+	issues via the Boost dynamic_pointer_cast, and adding a full set
+	of getHisto1D(), etc. explicitly named and typed accessors,
+	including ones with HepData dataset/axis ID signatures.
+
+	* Adding histo booking from an explicit reference Scatter2D (and
+	more placeholders for 2D histos / 3D scatters) and rewriting
+	existing autobooking to use this.
 
 	* Converting inappropriate uses of size_t to unsigned int in Analysis.
 
-	* Moving Analysis::addPlot to Analysis::add() (or reg()?) and adding get() and remove() (or unreg()?)
+	* Moving Analysis::addPlot to Analysis::add() (or reg()?) and
+	adding get() and remove() (or unreg()?)
 
 	* Fixing attempted abstraction of import fallbacks in rivet.util.import_ET().
 
